We do not want /dev/ttyACM0 to be created, so let's use the devices directive instead

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     restart: always
     volumes:
       - ./:/src/
+    devices:
       - /dev/ttyACM0:/dev/ttyACM0
     privileged: true
     working_dir: /src
